--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Borlow';
-    src: url(./font/BarlowSemiCondensed-SemiBold.ttf);
+    src: url(./font/BarlowSemiCondensed-Regular.ttf);
 }
 
 @font-face {
@@ -49,6 +49,8 @@ header {
     text-transform: capitalize;
     text-decoration: none;
     color: inherit;
+    font-weight: 600;
+    font-size: 22px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -107,7 +109,7 @@ header {
 
 .title h1 {
     font-family: 'Fraunces';
-    font-size: 3rem;
+    font-size: 5rem;
     font-weight: 800;
     text-transform: uppercase;
     color: white;
@@ -137,8 +139,8 @@ header {
     margin: 0;
 }
 .Transform-your-brand p{
-    font-size: 1.1em;
-    line-height: 1.3;
+    font-size: 20px;
+    margin: 30px 0px;
 }
 .Transform-your-brand h4 {
     display: inline;
@@ -184,8 +186,8 @@ header {
     color: #1a1e27;
 }
 .stand-out-text p {
-    font-size: 1.1em;
-    line-height: 1.3;
+    font-size: 20px;
+    margin: 30px 0px;
 }
 .stand-out-text h4 {
     font-family: 'Fraunces';
@@ -212,7 +214,8 @@ header {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding: 0px 150px 100px;
+    font-size: 20px;
+    padding: 0px 120px 85px;
     width: 50%;
     height: 600px;
     box-sizing: border-box;
@@ -229,7 +232,8 @@ header {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding: 0px 150px 100px;
+    font-size: 20px;
+    padding: 0px 120px 85px;
     width: 50%;
     height: 600px;
     box-sizing: border-box;
@@ -417,10 +421,6 @@ footer .icone li a {
         bottom: 50%;
       }
 
-
-
-   
-    
 .section1 {
     width: 100%;
     display: flex;
@@ -433,7 +433,7 @@ footer .icone li a {
 
 .Transform-your-brand {
     text-align: center;
-   padding: 10%; 
+   padding: 15%; 
    box-sizing: border-box;
 }
 
@@ -442,13 +442,13 @@ footer .icone li a {
 }
 
 .Transform-your-brand p{
-    font-size: 1.2em;
+    font-size: 15px;
     line-height: 1.5;
-    margin: 50px;
+    margin: 50px 0px;
 }
 
 .Transform-your-brand  h4 {
-    font-size: 1.3em;
+    font-size: 20px;
 }
 
 .section2 {
@@ -463,7 +463,7 @@ footer .icone li a {
 
 .stand-out-text {
     text-align: center;
-   padding: 10%; 
+   padding: 15%; 
    box-sizing: border-box;
 }
 
@@ -472,9 +472,9 @@ footer .icone li a {
 }
 
 .stand-out-text p{
-    font-size: 1.2em;
+    font-size: 15px;
     line-height: 1.5;
-    margin: 50px;
+    margin: 50px 0px;
 }
 
 .stand-out-text  h4 {
@@ -500,7 +500,7 @@ footer .icone li a {
 }
 
 .grsphic-design p,.photography p {
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-top: 1em;
 }
 
